final for 2025 informal review

--- a/sect/dept-service.tex
+++ b/sect/dept-service.tex
@@ -5,6 +5,8 @@
 \subline{Department of Earth \& Environmental Geosciences}
 Committee member: Tenure-track assistant professor of environmental geoscience search \hfill 2024
 
+Department Guide to Prof.~Xiwei Guo \hfill 2025--2026
+
 \subline{Environmental Studies Program}
 Guest lecturer in ENVI~1301 (Introduction to Environmental Studies)
 
