--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -3,17 +3,16 @@
 \lineitem[2022 -- 2024]{Montshire Museum of Science}
 \subline{Guest Scientist}
 \begin{itemize}
-\item Lead and assist educational activities within the museum.
+\item Develop, lead, and assist educational programming and activities within the museum.
 \item Explain Earth and space science concepts to pre-K through adult audiences.
-\item Develop programming focused on planetary science topics.
 \end{itemize}
 
 \lineitem[2018 -- 2022]{Santa Cruz Museum of Natural History}
 \subline{Volunteer Scientist}
 \begin{itemize}
 	\item Created educational content and hosted activities at monthly museum events.
-	\item Co-hosted monthly educational video streams covering geoscience topics. \\
-	Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
+	\item Co-hosted monthly educational video streams covering geoscience topics.
+	%Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
 \end{itemize}
 
 \lineitem[2019--2023]{Skype a Scientist}
@@ -30,18 +29,15 @@
 	\item Organized and implemented inclusivity-centered outreach and community-building events.
 \end{itemize}
 
-\lineitem[2015 -- 2016]{Peary-MacMillan Arctic Museum \brunswick}
+\lineitem[2012 -- 2016]{Peary-MacMillan Arctic Museum \brunswick}
+\subline[2012 -- 2014]{Student Tour Guide}
 \subline[2015 -- 2016]{Curatorial Intern}
 \begin{itemize}
-	\item Developed outreach programming and exhibit content.
-	\item Supplemented undergraduate courses with museum collections and expertise.
+	\item Developed outreach programming, exhibit content, and undergraduate course material.
 	\item Mentored and trained undergraduate student interns and employees.
 \end{itemize}
 
-\subline[2012 -- 2014]{Student Tour Guide}
 
 \lineitem[2015]{Museum of the Rockies \qquad \normalfont{Bozeman, MT, U.S.A.}}
-\textit{Security Volunteer}
-\begin{itemize}
-	\item Answered visitors' questions and facilitated interpretive discussions about natural history exhibits.
-\end{itemize}
+\subline{Security Volunteer}
+Answered visitors' questions and facilitated interpretive discussions about natural history exhibits.
