--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -12,7 +12,7 @@
 \lineitem{Refereed}
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
-    \item R.~Rampalli*, J.W.~Johnson, M.K.~Ness, \ghedwards, E.R.~Newton, E.J.~Griffith, M.~Bedell, K.~Wang. 2025. A galactic perspective on the (unremarkable) relative refractory depletion observed in the Sun. \inreview{The Astrophysical Journal}. \arxiv{2509.03577}.
+    \item R.~Rampalli*, J.W.~Johnson, M.K.~Ness, \ghedwards, E.R.~Newton, E.J.~Griffith, M.~Bedell, K.~Wang. 2025. A galactic perspective on the (unremarkable) relative refractory depletion observed in the Sun. \inreview{The Astrophysical Journal}. \arxiv{2509.03577}.\TUpubpct{5}
 
     \item A.~Abuawad, M.~Griffiths, \ghedwards, A.~Eftekhari, M.~El-Ebweini, H.~Al-Najar, A.~Butmeh, R.~Abu~Dayyeh, M.~El-Shewy, A.~Aker. 2025. The ongoing environmental destruction and degradation of Gaza: the resulting public health crisis. \pub{American Journal of Public Health}{115}. \\\doi{10.2105/AJPH.2025.308140}. SSRN preprint:~\doi{10.2139/ssrn.5021472}.\TUpubpct{10}
  
