--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -2,18 +2,18 @@
 \lineitem{Trinity University}
 \subline{Courses Taught}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{r l} %p columns set fixed width and allow text wrapping
-	Fall, 2024\ongoing & GEOS 3410: Global Climate Change\\
-	Spring, 2025\ongoing & GEOS 2402: Earth Surface Processes\\
-	Spring, 2025\ongoing & GEOS 1409: Earth's Environmental Systems\\
+\begin{tabular}{r ll} 
+	Fall, 2024 & GEOS 3410 & Global Climate Change\\
+	Spring, 2025 & GEOS 2402 & Earth Surface Processes\\
+	Spring, 2025 & GEOS 1409 & Earth's Environmental Systems\\
 \end{tabular}
 
 \subline{Guest Lectures}
 \tagpdfsetup{table/tagging=presentation}
-\begin{tabular}{l l} %p columns set fixed width and allow text wrapping
-	Fall 2025 & ENVI 1301: Introduction to Environmental Studies \\
-	Fall 2025 & GNED 3151/3252: Ethics, Racism \& Gender Inequality in STEM I\\
-	Fall 2025 & INTL 1301: Introduction to International Studies
+\begin{tabular}{r ll} 
+	Fall 2025 & ENVI 1301 & Introduction to Environmental Studies \\
+	Fall 2025 & GNED 3151/3252 & Ethics, Racism \& Gender Inequality in STEM I\\
+	Fall 2025 & INTL 1301 & Introduction to International Studies
 \end{tabular}
 
 \subline{Mentored Undergraduate Researchers}
@@ -43,11 +43,7 @@
 \end{tabular}
 
 \subline[2022 -- 2023]{Research Group Leader}
-Acting leader of a research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator was on leave. Responsibilities included:
-\begin{itemize}
-\item Coordinate and facilitate group meetings, including mini-workshops on research tools and skills.
-\item Provide non-specialist research guidance and evaluate research progress.
-\end{itemize}
+Acting leader of a stellar and exoplanetary astronomy research group (4 graduate, 2 undergraduate students) in the Department of Physics \& Astronomy while the Primary Investigator was on leave.
 
 \subline{Mentored Graduate Researchers}
 \tagpdfsetup{table/tagging=presentation}
@@ -97,8 +93,5 @@ Fall 2012, 2013 & Investigating Earth\\Fall 2013 & Marine Biogeochemistry
 \end{tabular}
 
 \lineitem[2015]{Bozeman \& Livingston Public Schools \qquad \normalfont{MT, U.S.A.}}
-\textit{Substitute Teacher}
-\begin{itemize}
-	\item Instructor and paraprofessional in K-12 classrooms.
-	%Taught students with various educational needs in diverse subjects.
-\end{itemize}
+\subline{Substitute Teacher}
+Instructor and paraprofessional in K-12 classrooms.
